seprate js code in both files registration.js and login.js, basic changes in html files

--- a/HTML/SeatBooking.html
+++ b/HTML/SeatBooking.html
@@ -182,7 +182,7 @@
 
         document.getElementById("display").innerText += " for " + show + " " + theater;
     </script>
-    <script type="module" src="/JS/SeatBooking.JS"></script>
+    <script type="module" src="/JS/seatBooking.JS"></script>
 </body>
 
 </html>
