--- a/HTML/rec_movie_1.html
+++ b/HTML/rec_movie_1.html
@@ -11,7 +11,7 @@
     <style>
         .container-fluid {
             /* background-color: rgba(5, 1, 1, 0.484); */
-            background-image: url("/Images/img3.jpg");
+            background-image: url("/Images/img14.jpg");
             opacity: 100%;
             height: 580px;
             width: 90%;
@@ -74,16 +74,24 @@
 
     <div class="container-fluid">
         <div class="innerdiv1">
-            <img src="/Images/img1.jpg" alt="" class="row_poster row_posterLarge displayimg">
+            <img src="/Images/img8.jpg" alt="" class="row_poster row_posterLarge displayimg">
         </div>
 
         <div class="innerdiv2">
             <!-- <img src="/Images/img2.jpg" alt="" class="row_poster row_posterLarge displayimg"> -->
-            <div>Jocker</div>
+            <div id="movieName">Fast & Furious</div>
             <a href="/HTML/BookNow.html"><button type="button" class="btn btn-danger me-md-2 booknow">
                     Book Now</button></a>
         </div>
     </div>
+    <script>
+        //picking movie name for printing in screen
+
+        let moviename = document.getElementById("movieName").innerText;
+        console.log(moviename);
+        localStorage.setItem("MovieName", moviename);
+    </script>
+    <script src="/js/SeatBooking.JS"></script>
 </body>
 
 </html>
