--- a/HTML/BookNow.html
+++ b/HTML/BookNow.html
@@ -155,11 +155,11 @@
     <script>
 
         // document.getElementById("timeid").onclick = function () {
-        //     location.href = "/HTML/SeatBooking.html"
+        //     location.href = "./html/SeatBooking.html";
         // }
 
 
-        window.ShowTiming = function (id) {
+        window.ShowTiming = function (id) { 
             let element = document.getElementById(id);
             location.href = "/HTML/SeatBooking.html"
 
