--- a/HTML/SeatBooking.html
+++ b/HTML/SeatBooking.html
@@ -136,7 +136,7 @@
             </button>
         </div>
     </div>
-    <script type="module" src="/JS/seatBooking.JS"></script>
+    <script type="module" src="/JS/SeatBooking.JS"></script>
 </body>
 
 </html>
