--- a/HTML/login.html
+++ b/HTML/login.html
@@ -129,7 +129,7 @@
 
         const db = firebase.database();
     </script>
-    <script src="/JS/login.JS"></script>
+    <!-- <script src="/JS/login.JS"></script> -->
 </body>
 
 </html>
