--- a/HTML/rec_movie_1.html
+++ b/HTML/rec_movie_1.html
@@ -8,65 +8,7 @@
     <title>BookYourShow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/styles.css">
-    <style>
-        .container-fluid {
-            /* background-color: rgba(5, 1, 1, 0.484); */
-            background-image: url("/Images/img14.jpg");
-            opacity: 100%;
-            height: 580px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 65px;
-            user-select: none;
-        }
-
-        .innerdiv1 {
-            width: 40%;
-            margin-left: 5%;
-            /* background-color: rgb(5, 3, 3); */
-            max-height: 100%;
-            float: left;
-            cursor: pointer;
-        }
-
-        .innerdiv2 {
-            /* background-color: rgb(5, 3, 3); */
-            width: 40%;
-            margin-left: 60%;
-            max-height: 100%;
-            font-weight: 900;
-            color: white;
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 100px;
-            text-align: center;
-            padding-top: 140px;
-            user-select: none;
-
-        }
-
-        .displayimg {
-            margin-top: 7%;
-            max-height: 500px;
-            margin-left: -8%;
-        }
-
-        .booknow {
-            width: 80%;
-            padding-bottom: 5%;
-            padding-top: 5%;
-            font-size: 35px;
-            font-weight: bolder;
-            font-family: cursive;
-            cursor: pointer;
-            border-radius: 20px;
-        }
-
-        .booknow:hover {
-            transform: scale(1.05);
-            transition: transform 550ms;
-
-        }
-    </style>
+    <link rel = "stylesheet" href="/CSS/all_rec_movies.css">
 </head>
 
 <body>
@@ -91,7 +33,7 @@
         console.log(moviename);
         localStorage.setItem("MovieName", moviename);
     </script>
-    <script src="/js/SeatBooking.JS"></script>
+    <!-- <script src="/js/SeatBooking.JS"></script> -->
 </body>
 
 </html>
