--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -120,7 +120,7 @@
         </div>
     </section>
     <!----------------------------------------------------- Registration.JS ------------------------------------------------------->
-    <script type="module" src="/JS/registration.JS"></script>
+    <!-- <script type="module" src="/JS/registration.JS"></script> -->
     <!---------------------------------------------------------------------------------------------------------------------------->
 </body>
 
