updation in admin page

--- a/HTML/adminPage.html
+++ b/HTML/adminPage.html
@@ -55,8 +55,8 @@
                             Movies
                         </a>
                         <ul class="dropdown-menu active" aria-labelledby="navbarDropdownMenuLink">
-                            <li><button class="dropdown-item" onclick="addMovie('Add Movie','Hello');" href="#">Add Movies</button></li>
-                            <li><button class="dropdown-item" onclick="addMovie('Remove Movie','hii');" href="#">Remove Movies</button></li>
+                            <li><button id="addMovie" class="dropdown-item" href="#">Add Movies</button></li>
+                            <li><button id="removeMovie" class="dropdown-item" href="#">Remove Movies</button></li>
                          
 
                         </ul>
@@ -74,6 +74,7 @@
             </div>
         </div>
     </nav>
-<script src="../JS/AdminpageModel.js"></script>    
+<script src="../JS/AdminpageModel.js"></script> 
+<script src="../JS/adminPageScript.js"></script>   
 </body>
 </html>
