--- a/HTML/adminPage.html
+++ b/HTML/adminPage.html
@@ -21,11 +21,12 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
         <div class="container-fluid">
             <a>
-                <img src="Images/logo.png" alt="" width="100" height="40" class="d-inline-block align-text-top">
+                <img src="Images/logo.png" alt="" width="130" height="55" class="d-inline-block align-text-top">
             </a>
+            <h4 id="heading">Admin Portal</h4>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,7 +35,7 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item homePage">
-                        <a class="nav-link active" aria-current="page" href="adminPage.html">Home</a>
+                        <a class="nav-link active" id="homeBtn" aria-current="page" href="../HTML/adminPage.html">Home</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -65,14 +66,7 @@
 
                 </ul>
             </div>
-            <div class="signin">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="../HTML/login.html">Sign In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="../HTML/registration.html">Sign Up</a>
-                </li>
-            </div>
+           
         </div>
     </nav>
     <script>
